finish jquery and start controllers

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,9 @@
             "App\\": "app/"
         },
         "files": [
-            "app/Helpers/PathHelpers.php"
+            "app/Helpers/MessagesHelpers.php",
+            "app/Helpers/PathHelpers.php",
+            "app/Helpers/UsersHelpers.php"
         ]
     },
     "autoload-dev": {
